fixed broken functional tests

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,17 +3,17 @@
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
-#
-one:
+
+admin:
   id: 1
   email: testemail1@example.com
   admin: true
   first_name: first1
   last_name: last1
 
-two:
+standard:
   id: 2
   email: testemail2@example.com
-  admin: true
+  admin: false
   first_name: first2
   last_name: last2
