--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -8,6 +8,8 @@ one:
   url: MyString
   author: MyString
   feed_id: 1
+  description: MyString
+  image: MyString
 
 two:
   id: 2
@@ -17,3 +19,5 @@ two:
   url: MyString
   author: MyString
   feed_id: 1
+  description: MyString
+  image: MyString
