--- a/test/fixtures/product_categories.yml
+++ b/test/fixtures/product_categories.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  product: one
-  category: one
+  id: 1
+  product_id: 1
+  category_id: 1
 
 two:
-  product: two
-  category: two
+  id: 2
+  product_id: 2
+  category_id: 2
