--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1
   screenname: MyString
   city: MyString
+  user_id: 1
 
 two:
+  id: 2
   screenname: MyString
   city: MyString
+  user_id: 2
