--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -3,7 +3,11 @@
 one:
   quantity: 1
   price: 9.99
+  product_id: 1
+  order_id: 1
 
 two:
   quantity: 1
   price: 9.99
+  product_id: 2
+  order_id: 2
